--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -48,4 +48,5 @@ jobs:
       - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38 # v4.4.0
         with:
           token: ${{ steps.generate-token.outputs.token }}
-          release-type: go
+          config-file: release-please-config.json
+          manifest-file: .release-please-manifest.json
