--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,8 +9,22 @@ on:
     inputs:
       version:
         description: "Version to release (without v prefix)"
-        required: true
+        required: false
         default: "0.0.0-test"
+      architectures:
+        description: "Architectures to build"
+        required: false
+        default: "amd64,arm64"
+        type: choice
+        options:
+          - "amd64"
+          - "arm64"
+          - "amd64,arm64"
+      dry_run:
+        description: "Dry run - build but don't push to registry"
+        required: false
+        default: false
+        type: boolean
 
 permissions:
   contents: write
@@ -21,73 +35,58 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - goos: linux
-            goarch: amd64
-          - goos: linux
-            goarch: arm64
-          - goos: darwin
-            goarch: amd64
-          - goos: darwin
-            goarch: arm64
-
+  prepare:
+    name: Prepare release
+    runs-on: ubuntu-24.04
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+      build_matrix: ${{ steps.matrix.outputs.build_matrix }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Set up Go
-        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5.5.0
-        with:
-          go-version: "1.23"
-
-      - name: Install OCB
-        run: go install go.opentelemetry.io/collector/cmd/builder@v0.144.0
-
-      - name: Get version
+      - name: Determine version
         id: version
         run: |
           if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+            echo "version=${{ inputs.version }}" >> $GITHUB_OUTPUT
           else
             echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
           fi
 
-      - name: Update manifest version
+      - name: Build matrix
+        id: matrix
         run: |
-          sed -i "s/version: .*/version: ${{ steps.version.outputs.version }}/" collector/manifest.yaml
+          ARCHS="${{ inputs.architectures || 'amd64,arm64' }}"
 
-      - name: Generate collector source
-        working-directory: collector
-        run: builder --config=manifest.yaml
+          BUILD_MATRIX='{"include":['
+          FIRST=true
 
-      - name: Build binary
-        working-directory: collector/_build
-        env:
-          CGO_ENABLED: "0"
-          GOOS: ${{ matrix.goos }}
-          GOARCH: ${{ matrix.goarch }}
-        run: |
-          go build -ldflags="-s -w" -o tero-collector-${{ matrix.goos }}-${{ matrix.goarch }} .
+          for arch in ${ARCHS//,/ }; do
+            if [ "$FIRST" = true ]; then
+              FIRST=false
+            else
+              BUILD_MATRIX="$BUILD_MATRIX,"
+            fi
+            if [ "$arch" = "amd64" ]; then
+              BUILD_MATRIX="$BUILD_MATRIX{\"arch\":\"amd64\",\"runner\":\"ubuntu-24.04\",\"platform\":\"linux/amd64\"}"
+            else
+              BUILD_MATRIX="$BUILD_MATRIX{\"arch\":\"arm64\",\"runner\":\"ubuntu-24.04-arm\",\"platform\":\"linux/arm64\"}"
+            fi
+          done
 
-      - name: Upload binary artifact
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
-        with:
-          name: tero-collector-${{ matrix.goos }}-${{ matrix.goarch }}
-          path: collector/_build/tero-collector-${{ matrix.goos }}-${{ matrix.goarch }}
+          BUILD_MATRIX="$BUILD_MATRIX]}"
+          echo "build_matrix=$BUILD_MATRIX" >> $GITHUB_OUTPUT
+          echo "Build matrix: $BUILD_MATRIX"
 
-  docker:
-    runs-on: ubuntu-latest
-    needs: build
+  build:
+    name: Build ${{ matrix.arch }}
+    runs-on: ${{ matrix.runner }}
+    needs: prepare
+    timeout-minutes: 30
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.prepare.outputs.build_matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@29109295f81e9208d7d86ff1c6c12d2833863392 # v3.6.0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -99,61 +98,92 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Get version
-        id: version
-        run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            echo "version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
-          else
-            echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5.7.0
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=${{ steps.version.outputs.version }}
-            type=sha
-
       - name: Update manifest version
         run: |
-          sed -i "s/version: .*/version: ${{ steps.version.outputs.version }}/" collector/manifest.yaml
+          sed -i "s/version: .*/version: ${{ needs.prepare.outputs.version }}/" collector/manifest.yaml
 
-      - name: Build and push Docker image
+      - name: Build and push image
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
         with:
           context: .
           file: collector/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          platforms: ${{ matrix.platform }}
+          push: ${{ inputs.dry_run != true }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.prepare.outputs.version }}-${{ matrix.arch }}
+          cache-from: type=gha,scope=${{ matrix.arch }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.arch }}
 
-  release:
-    runs-on: ubuntu-latest
-    needs: [build, docker]
-    if: github.event_name != 'workflow_dispatch'
+  manifest:
+    name: Create multi-arch manifest
+    runs-on: ubuntu-24.04
+    needs: [prepare, build]
+    if: ${{ inputs.dry_run != true }}
     steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
+      - name: Log in to Container Registry
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
-          path: artifacts
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Prepare release assets
+      - name: Create and push manifest
         run: |
-          mkdir -p release
-          for dir in artifacts/*/; do
-            name=$(basename "$dir")
-            cp "$dir"/* "release/$name"
-          done
-          cd release && sha256sum * > checksums.txt
+          VERSION="${{ needs.prepare.outputs.version }}"
+          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+          ARCHS="${{ inputs.architectures || 'amd64,arm64' }}"
 
-      - name: Upload release assets
-        uses: softprops/action-gh-release@da05d552573ad5aba039eaac05058a918a7bf631 # v2.2.2
-        with:
-          files: |
-            release/*
+          # Build the list of arch-specific images
+          IMAGES=""
+          for arch in ${ARCHS//,/ }; do
+            IMAGES="$IMAGES $IMAGE:$VERSION-$arch"
+          done
+
+          # Create and push version tag manifest
+          docker manifest create "$IMAGE:$VERSION" $IMAGES
+          docker manifest push "$IMAGE:$VERSION"
+
+          # Create and push latest tag manifest (only for tag pushes, not workflow_dispatch)
+          if [ "${{ github.event_name }}" != "workflow_dispatch" ]; then
+            docker manifest create "$IMAGE:latest" $IMAGES
+            docker manifest push "$IMAGE:latest"
+          fi
+
+          # Create and push sha tag manifest
+          SHA_SHORT=$(echo "${{ github.sha }}" | cut -c1-7)
+          docker manifest create "$IMAGE:sha-$SHA_SHORT" $IMAGES
+          docker manifest push "$IMAGE:sha-$SHA_SHORT"
+
+  summary:
+    name: Release summary
+    runs-on: ubuntu-24.04
+    needs: [prepare, build, manifest]
+    if: always()
+    steps:
+      - name: Generate summary
+        run: |
+          VERSION="${{ needs.prepare.outputs.version }}"
+          IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+
+          echo "## Release Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Version: $VERSION" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          if [ "${{ inputs.dry_run }}" = "true" ]; then
+            echo "### Dry Run Mode" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Images were built but not pushed to registry." >> $GITHUB_STEP_SUMMARY
+          else
+            echo "### Docker Images" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "| Tag | Pull Command |" >> $GITHUB_STEP_SUMMARY
+            echo "|-----|--------------|" >> $GITHUB_STEP_SUMMARY
+            echo "| \`$VERSION\` | \`docker pull $IMAGE:$VERSION\` |" >> $GITHUB_STEP_SUMMARY
+
+            if [ "${{ github.event_name }}" != "workflow_dispatch" ]; then
+              echo "| \`latest\` | \`docker pull $IMAGE:latest\` |" >> $GITHUB_STEP_SUMMARY
+            fi
+
+            SHA_SHORT=$(echo "${{ github.sha }}" | cut -c1-7)
+            echo "| \`sha-$SHA_SHORT\` | \`docker pull $IMAGE:sha-$SHA_SHORT\` |" >> $GITHUB_STEP_SUMMARY
+          fi
