use new package

--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -1,7 +1,8 @@
 # Build stage
 FROM golang:1.24-alpine AS builder
 
-RUN apk add --no-cache git
+# Install build dependencies including Hyperscan
+RUN apk add --no-cache git build-base hyperscan-dev pkgconf
 
 # Install ocb (OpenTelemetry Collector Builder)
 RUN go install go.opentelemetry.io/collector/cmd/builder@v0.144.0
@@ -16,16 +17,16 @@ WORKDIR /build/collector
 # Generate collector source code from manifest
 RUN builder --config=manifest.yaml
 
-# Build the collector
+# Build the collector with CGO enabled for Hyperscan
 WORKDIR /build/collector/_build
-RUN CGO_ENABLED=0 go build -o tero-collector .
+RUN CGO_ENABLED=1 go build -o tero-collector .
 
 # Runtime stage
 FROM alpine:3.21
 
 LABEL org.opencontainers.image.description="Tero OpenTelemetry Collector Distribution"
 
-RUN apk add --no-cache ca-certificates
+RUN apk add --no-cache ca-certificates hyperscan
 
 COPY --from=builder /build/collector/_build/tero-collector /usr/bin/tero-collector
 
