feat: install policy provider library and use it in the processor (#4)

--- a/collector/Dockerfile
+++ b/collector/Dockerfile
@@ -1,7 +1,8 @@
 # Build stage
 FROM golang:1.24-alpine AS builder
 
-RUN apk add --no-cache git
+# Install build dependencies including Vectorscan (Hyperscan fork)
+RUN apk add --no-cache git build-base vectorscan-dev vectorscan-static pkgconf
 
 # Install ocb (OpenTelemetry Collector Builder)
 RUN go install go.opentelemetry.io/collector/cmd/builder@v0.144.0
@@ -13,19 +14,18 @@ COPY . .
 
 WORKDIR /build/collector
 
-# Generate collector source code from manifest
+# Generate collector source code (skip compilation to control CGO ourselves)
 RUN builder --config=manifest.yaml
-
-# Build the collector
-WORKDIR /build/collector/_build
-RUN CGO_ENABLED=0 go build -o tero-collector .
 
 # Runtime stage
 FROM alpine:3.21
 
 LABEL org.opencontainers.image.description="Tero OpenTelemetry Collector Distribution"
+LABEL org.opencontainers.image.source="https://github.com/usetero/tero-collector-distro"
+LABEL org.opencontainers.image.licenses="Apache-2.0"
 
-RUN apk add --no-cache ca-certificates
+
+RUN apk add --no-cache ca-certificates libstdc++ libgcc vectorscan
 
 COPY --from=builder /build/collector/_build/tero-collector /usr/bin/tero-collector
 
