--- a/collector/manifest.yaml
+++ b/collector/manifest.yaml
@@ -35,9 +35,9 @@ processors:
   - gomod: >-
       github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourceprocessor
       v0.144.0
-  - gomod: >-
-      github.com/usetero/tero-collector-distro/processor/policyprocessor
-      v0.1.0
+  # x-release-please-start-version
+  - gomod: github.com/usetero/tero-collector-distro/processor/policyprocessor v0.2.0
+    # x-release-please-end
     path: /build/processor/policyprocessor
 receivers:
   - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.144.0
