--- a/processor/policyprocessor/metadata.yaml
+++ b/processor/policyprocessor/metadata.yaml
@@ -3,7 +3,7 @@ type: policy
 status:
   class: processor
   stability:
-    alpha: [logs]
+    alpha: [logs, metrics, traces]
   distributions: []
   warnings: []
   codeowners:
