--- a/collector/manifest.yaml
+++ b/collector/manifest.yaml
@@ -19,10 +19,19 @@ extensions:
   - gomod: >-
       github.com/open-telemetry/opentelemetry-collector-contrib/extension/pprofextension
       v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/extension/k8sleaderelector
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/extension/observer/k8sobserver
+      v0.144.0
 exporters:
   - gomod: go.opentelemetry.io/collector/exporter/debugexporter v0.144.0
   - gomod: go.opentelemetry.io/collector/exporter/otlpexporter v0.144.0
   - gomod: go.opentelemetry.io/collector/exporter/otlphttpexporter v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/exporter/datadogexporter
+      v0.144.0
 processors:
   - gomod: go.opentelemetry.io/collector/processor/batchprocessor v0.144.0
   - gomod: go.opentelemetry.io/collector/processor/memorylimiterprocessor v0.144.0
@@ -35,13 +44,45 @@ processors:
   - gomod: >-
       github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourceprocessor
       v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/processor/k8sattributesprocessor
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/processor/resourcedetectionprocessor
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/processor/transformprocessor
+      v0.144.0
   - gomod: github.com/usetero/tero-collector-distro/processor/policyprocessor v0.2.0
     path: /build/processor/policyprocessor
 receivers:
   - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.144.0
-  - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/datadogreceiver v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/datadogreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/jaegerreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/k8sclusterreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/prometheusreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/receivercreator
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/zipkinreceiver
+      v0.144.0
 connectors:
   - gomod: go.opentelemetry.io/collector/connector/forwardconnector v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/connector/datadogconnector
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/connector/spanmetricsconnector
+      v0.144.0
 providers:
   - gomod: go.opentelemetry.io/collector/confmap/provider/envprovider v1.50.0
   - gomod: go.opentelemetry.io/collector/confmap/provider/fileprovider v1.50.0
