--- a/collector/manifest.yaml
+++ b/collector/manifest.yaml
@@ -14,6 +14,9 @@ extensions:
       github.com/open-telemetry/opentelemetry-collector-contrib/extension/bearertokenauthextension
       v0.144.0
   - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckextension
+      v0.144.0
+  - gomod: >-
       github.com/open-telemetry/opentelemetry-collector-contrib/extension/healthcheckv2extension
       v0.144.0
   - gomod: >-
