manifest update again

--- a/collector/manifest.yaml
+++ b/collector/manifest.yaml
@@ -76,6 +76,15 @@ receivers:
       github.com/open-telemetry/opentelemetry-collector-contrib/receiver/receivercreator
       v0.144.0
   - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/kafkametricsreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/postgresqlreceiver
+      v0.144.0
+  - gomod: >-
+      github.com/open-telemetry/opentelemetry-collector-contrib/receiver/redisreceiver
+      v0.144.0
+  - gomod: >-
       github.com/open-telemetry/opentelemetry-collector-contrib/receiver/zipkinreceiver
       v0.144.0
 connectors:
