fix hex handling

--- a/examples/config.yaml
+++ b/examples/config.yaml
@@ -23,3 +23,7 @@ service:
       receivers: [otlp]
       processors: [policy]
       exporters: [debug]
+    traces:
+      receivers: [otlp]
+      processors: [policy]
+      exporters: [debug]
